<resources>
    <string name="app_name">LaLigaApp</string>
    <string name="teams">Teams</string>
    <string name="standings">Standings</string>
    <string name="favorites">Favorites</string>
    <string name="fixtures">Fixtures</string>
    <string name="club" translatable="false">Club</string>
    <string name="gp">GP</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="gf" translatable="false">GF</string>
    <string name="ga">GA</string>
    <string name="gd">GD</string>
    <string name="pts" translatable="false">Pts</string>
    <string name="settings">Settings</string>
    <string name="darkmode">Dark Mode</string>
    <string name="language">Language</string>
    <string name = "english">English</string>
    <string name = "spanish">Spanish</string>
    <string name="favorites_not_available">Favorites tab is only available for paid version</string>
    <string name="players">Players</string>
    <string name="add_to_fav">Add to Favorites</string>
    <string name="remove_from_fav">Remove from Favorites</string>
    <string name="stadium">"Stadium: "</string>
    <string name="team_info">Team Info</string>
</resources>