<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/club"
        android:gravity="end"
        android:padding="4dp"
        android:paddingEnd="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gp"
        android:gravity="center"
        android:padding="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/w"
        android:gravity="center"
        android:padding="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/d"
        android:gravity="center"
        android:padding="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/l"
        android:gravity="center"
        android:padding="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gf"
        android:gravity="center"
        android:padding="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ga"
        android:gravity="center"
        android:padding="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gd"
        android:gravity="center"
        android:padding="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/pts"
        android:gravity="center"
        android:padding="4dp"
        android:textStyle="bold"/>

</LinearLayout>